--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.3",
+    "react-simple-maps": "^3.0.0",
     "react-transition-group": "^4.4.5"
   },
   "devDependencies": {
